--- a/bckLencaStore/package.json
+++ b/bckLencaStore/package.json
@@ -9,9 +9,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "hbs": "~4.0.4",
+    "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
     "less-middleware": "~2.2.1",
+    "mongodb": "^3.5.3",
     "morgan": "~1.9.1"
   }
 }
