--- a/frnlencastore/package.json
+++ b/frnlencastore/package.json
@@ -2,10 +2,12 @@
   "name": "frnlencastore",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
